[package]
name = "hatena-blog-api"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
atom_syndication = "0.12"
chrono = "0.4"
quick-xml = "0.36"
reqwest = { version = "0.12", default-features = false }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }

[features]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
