[package]
name = "hatena-blog-api"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
atom_syndication = "0.12"
chrono = "0.4"
quick-xml = "0.39"
reqwest = { version = "0.13", default-features = false }
thiserror = "2"
urlencoding = "2"

[dev-dependencies]
anyhow = "1"
static_assertions = "1.1.0"
temp-env = "0.3"
tokio = { version = "1", features = ["full"] }

[features]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls"]
